--- a/style.css
+++ b/style.css
@@ -1,5 +1,43 @@
+:root {
+  --primary: #00b6f0;
+}
+
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 18px;
+}
+
+.header {
+  width: 1180px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 30px auto 0;
+}
+
+.header img {
+  width: 206px;
+}
+
+.container-button-1 button {
+  padding: 10px 36px;
+  background-color: white;
+  color: var(--primary);
+  border-radius: 85px;
+  border: 1px solid var(--primary);
+}
+
+.container-nav {
+  display: flex;
+  gap: 41px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container-nav a {
+  text-decoration: none;
+  color: black;
 }
