--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
   --primary: #00b6f0;
+  --light: #fff;
+  --dark-text: #20262a;
 }
 
 * {
@@ -15,7 +17,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 30px auto 0;
+  margin: 30px auto 90px;
 }
 
 .header img {
@@ -40,4 +42,59 @@
 .container-nav a {
   text-decoration: none;
   color: black;
+}
+
+.container-intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 37px;
+  padding: 39px 0;
+}
+
+.container-intro h1 {
+  font-size: 72px;
+  line-height: 78px;
+  width: 500px;
+  text-align: center;
+}
+
+.container-intro p {
+  font-size: 24px;
+  width: 525px;
+  text-align: center;
+}
+
+.container-button-2 {
+  padding: 45px 0;
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+}
+
+.container-button-2 button {
+  padding: 20px 46px;
+  border: none;
+  border-radius: 85px;
+  font-size: 18px;
+}
+
+.container-button-2 button:first-child {
+  background-color: var(--primary);
+  color: var(--light);
+}
+
+.container-button-2 button:last-child {
+  background-color: var(--light);
+  color: var(--dark-text);
+}
+
+.container-image {
+  width: 1119px;
+  margin: 0 auto;
+}
+
+.container-image img {
+  height: auto;
+  width: 100%;
 }
